# yolo_pose_android

./: LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/detect_emny/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolo11n_pose.ncnn.param
app/src/main/cpp/: CMakeLists.txt  yolo_ncnn.cpp
app/src/main/java/com/example/detect_emny/: MainActivity.kt  UsbManagerHelper.kt  YoloPoseDetector.kt
app/src/main/java/com/example/detect_emny/config/: AppConfig.kt
app/src/main/java/com/example/detect_emny/model/: FruitModels.kt  PoseModels.kt  ScoreManager.kt
app/src/main/java/com/example/detect_emny/ui/components/: InfoDisplay.kt  PoseOverlay.kt  UsbControlView.kt  WeaponSelector.kt
app/src/main/java/com/example/detect_emny/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/detect_emny/util/: SoundManager.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/detect_emny/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
